[package]
name = "agent-sdk"
version = "0.9.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Rust Agent SDK for building LLM agents"
readme = "README.md"
keywords = ["agent", "llm", "ai", "anthropic", "tools"]
categories = ["api-bindings", "asynchronous"]

# docs.rs builds with every feature so the provider impls, MCP, web, skills,
# and otel surfaces all render. `--cfg docsrs` turns on the `doc_cfg`
# feature-badge annotations below.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
agent-sdk-foundation = { workspace = true }
agent-sdk-tools = { workspace = true }
# Providers are pulled in with no default features (set at the workspace
# level) so this crate's own feature flags decide which provider impls
# (and their deps) compile.
agent-sdk-providers = { workspace = true }
# Phase 13·E ergonomics macros (`#[derive(Tool)]` etc.). Re-exported below so
# consumers get them straight from the façade. The generated code refers to
# `::agent_sdk::…` paths, including a small `__macro_support` re-export module.
agent-sdk-macros = { workspace = true }
# `schemars` backs the optional `#[tool(schema = "derive")]` sugar; only pulled
# in (and re-exported through `__macro_support`) under the `macros-schema`
# feature.
schemars = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
url = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
opentelemetry = { workspace = true, optional = true }
# Maintained YAML parser — only the `skills` loader uses it (frontmatter).
serde_yaml_ng = { workspace = true, optional = true }
# HTML→text rendering — only the `web` fetch tool uses it.
html2text = { workspace = true, optional = true }

[features]
# The common case is an Anthropic agent, so `anthropic` is the only default
# provider. Everything else (other providers, web/MCP/skills tools) is
# opt-in so a minimal consumer does not pay for WebSocket, HTML, or YAML deps.
default = ["anthropic"]

# ── Providers (forward to the providers crate's matching feature) ──────
anthropic = ["agent-sdk-providers/anthropic"]
openai = ["agent-sdk-providers/openai"]
openai-codex = ["agent-sdk-providers/openai-codex"]
gemini = ["agent-sdk-providers/gemini"]
vertex = ["agent-sdk-providers/vertex"]
cloudflare = ["agent-sdk-providers/cloudflare"]

# ── Tools (gate optional modules + their heavy deps) ───────────────────
# Web search + fetch tools; `html2text` renders fetched pages.
web = ["dep:html2text"]
# Model Context Protocol client.
mcp = []
# Skill/command loading from markdown; `serde_yaml_ng` parses frontmatter.
skills = ["dep:serde_yaml_ng"]

# ── Observability (unchanged) ──────────────────────────────────────────
otel = ["opentelemetry"]

# ── Macro ergonomics (Phase 13·E) ──────────────────────────────────────
# Opt-in JSON-schema derivation for `#[tool(schema = "derive")]`. Turns on the
# macro crate's codegen path and pulls in `schemars`. The `#[derive(Tool)]` /
# `#[derive(TypedTool)]` / `#[derive(ToolName)]` derives themselves are always
# available (no feature needed) — only the schema-from-Input sugar is gated.
macros-schema = ["dep:schemars", "agent-sdk-macros/schema-derive"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
env_logger = { workspace = true }
tempfile = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
agent-sdk-otel = { path = "../agent-sdk-otel" }  # path-only (no version): breaks the otel<->agent-sdk publish cycle — cargo drops versionless dev-deps on publish
# Compile-fail UI tests for the Phase 13·E derive macros. Lives here (not in
# the proc-macro crate) because the generated code resolves `::agent_sdk::…`
# paths, which only this crate can provide.
trybuild = { workspace = true }
# Exercises `#[tool(schema = "derive")]` in the macro integration tests; only
# needed when the `macros-schema` feature is on, but dev-deps aren't
# feature-gated, so it's always available to test code.
schemars = { workspace = true }

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tool_round_trip"
path = "examples/tool_round_trip.rs"

[[example]]
name = "typed_tool"
path = "examples/typed_tool.rs"

[[example]]
name = "structured_output"
path = "examples/structured_output.rs"

[[example]]
name = "mcp_filesystem"
path = "examples/mcp_filesystem.rs"
required-features = ["mcp"]

[[example]]
name = "mcp_http_remote"
path = "examples/mcp_http_remote.rs"
required-features = ["mcp"]

[[example]]
name = "custom_tool"
path = "examples/custom_tool.rs"

[[example]]
name = "derive_tool"
path = "examples/derive_tool.rs"

[[example]]
name = "custom_hooks"
path = "examples/custom_hooks.rs"

[[example]]
name = "with_primitive_tools"
path = "examples/with_primitive_tools.rs"

[[example]]
name = "server_turn_summary"
path = "examples/server_turn_summary.rs"

[[example]]
name = "otel"
path = "examples/otel.rs"
required-features = ["otel"]

[lints]
workspace = true
