[package]
name = "agent-server"
version = "0.8.0"
edition.workspace = true
license-file = "../../LICENSE"
description = "Server-side agent orchestration built on narrow SDK crates"
publish = false

[dependencies]
agent-sdk-core = { workspace = true }
agent-sdk-tools = { workspace = true }
agent-sdk-providers = { workspace = true }
# Pulled in for `agent_sdk::context::{CompactionConfig, ContextCompactor,
# LlmContextCompactor}` so the daemon worker can run auto-compaction
# (proactive threshold trigger + post-failure overflow recovery) without
# duplicating the in-process loop's compactor implementation.
agent-sdk = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true, optional = true }
fail = { workspace = true, optional = true }

[features]
# Exposes in-crate test doubles (e.g. `CapturingThreadEventsWatchHandler`)
# to downstream `[dev-dependencies]`.  Never enable on a release build.
test-support = []
# Compiles the `observability` module and wires every metric emit-site.
# Default builds remain dependency-free.
otel = ["dep:opentelemetry"]
# Crash-injection failpoints (tikv `fail-rs`). When OFF (the default), the
# `fail_point!` call sites in the durable commit path compile to nothing and
# `fail-rs` is not even a dependency — production builds are zero-cost. When
# ON, `dep:fail` is pulled in with its own `failpoints` feature so injected
# panics/returns fire. Tests that exercise this MUST run under nextest, which
# isolates each test in its own process (the `fail-rs` registry is global).
failpoints = ["dep:fail", "fail/failpoints"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
async-stream = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }

[lints]
workspace = true
