[package]
name = "agent-service-host"
version = "0.8.0"
edition.workspace = true
license-file = "../../LICENSE"
publish = false

[[bin]]
name = "agent-service-host"
path = "src/main.rs"

[features]
default = ["postgres", "amqp"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
amqp = ["dep:lapin"]
# Compiles the `observability` module + wire-in points (gRPC tower
# layer, Postgres pool gauges, AMQP publish/consume timing) and
# enables `agent-server`'s matching `otel` feature so server-side
# metrics emit when the host is built with `--features otel`.
# Default builds remain dependency-free.
otel = [
    "dep:opentelemetry",
    "dep:tower",
    "dep:http",
    "dep:agent-sdk-otel",
    "agent-server/otel",
]

[dependencies]
agent-sdk-core.workspace = true
agent-sdk-tools.workspace = true
agent-sdk-providers.workspace = true
# Pulled in for `agent_sdk::context::CompactionConfig`, the auto-compaction
# knob hosts plumb through `ExecutionRuntime::with_compaction(...)` so the
# worker can run pre-call threshold compaction and post-failure overflow
# recovery (see `crates/agent-server/src/worker/root_turn.rs`).
agent-sdk.workspace = true
agent-server.workspace = true
agent-service-proto = { path = "../agent-service-proto" }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "net"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-health.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
base64.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
time.workspace = true
sqlx.workspace = true
uuid.workspace = true
url.workspace = true
lapin = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
agent-sdk-otel = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
http = { workspace = true, optional = true }

[dev-dependencies]
agent-sdk.workspace = true
# Re-enables `agent-server`'s test doubles (e.g.
# `CapturingThreadEventsWatchHandler`) for host-level tests.
agent-server = { workspace = true, features = ["test-support"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tower = { workspace = true }
http = { workspace = true }

[lints]
workspace = true
