[package]
name = "agent-service-proto"
version = "0.8.0"
edition = "2024"
license-file = "../../LICENSE"
publish = false
build = "build.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[lints.rust]
unsafe_code = "forbid"
