[package]
name = "agent-service-proto"
version = "0.8.0"
edition = "2024"
license = "MIT"
publish = false
build = "build.rs"

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3"

[lints.rust]
unsafe_code = "forbid"
