[package]
name = "agent-service-proto"
version = "0.8.0"
edition = "2024"
license = "MIT"
# Internal: generated tonic/prost bindings for the host's gRPC contract.
# Excluded from the workspace (see root Cargo.toml `exclude`) because its
# build script invokes `protoc`; it is consumed only by `agent-service-host`
# and is intentionally not published. A future published gRPC-client binding
# would vendor or regenerate these from the `.proto` files directly.
publish = false
build = "build.rs"

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3"

[lints.rust]
unsafe_code = "forbid"
